--- a/config/oracle_jre.yml
+++ b/config/oracle_jre.yml
@@ -20,8 +20,8 @@
 # e.g.  repository_root: "http://example.com/oracle-jre/{platform}/{architecture}"
 ---
 jre:
-  version: 1.8.0_12+
-  repository_root: ""
+  version: 1.8.0_121
+  repository_root: "https://s3-eu-west-1.amazonaws.com/eva-oracle-jre/linux/x64/"
 memory_calculator:
   version: 2.+
   repository_root: "{default.repository.root}/memory-calculator/{platform}/{architecture}"
